--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title>
-        Italia
+        DA RINOMINARE
         </title>
     </head>
     <body>
         <h1 align="center"> Coronavirus </h1>
-        <script src="Italia.js">
+        <script src="darinominare.js">
     </script>
     </body>
 </html>
